<resources>
    <string name="app_name">GreenGardenApp</string>
    <string name="welcome_text">Bienvenido</string>
    <string name="email_text">Correo electrónico</string>
    <string name="name_text">Nombre</string>
    <string name="password_text">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="accept_terms">Aceptar términos y condiciones</string>
    <string name="accept_news">Recibir noticias</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_register">Registrarme</string>
    <string name="forgot_password">¿Olvidaste tú contraseña?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_esta">Estadísticas</string>
    <string name="txt_title_e1">Consumo de agua en el año</string>
    <string name="txt_title_e2">Consumo de abono en el año</string>
    <string name="txt_title_e3">Consumo de compost en el año</string>
    <string name="insert_consume">Para insertar datos seleccione el titulo de cada categoria</string>

    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

</resources>